package edu.fiuba.algo3.modelo;

public interface JokerApply {
    void apply(Score score);
    String getNombre();
    String getDescripcion();
}
